computer not pushing